<resources>
    <string name="app_name">MyPetsHub</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="pet_services">Hamugaway is your pet’s trusted \nhaven, offering personalized care \nand a loving environment. Our \nservices include <b>boarding</b>, <b>daycare</b>, \nand <b>pet sitting</b>.</string>
    <string name="pet_services2">With a dedicated team and a \ncommitment to excellence, we \nensure your furry friend feels \nright at home.</string>
    <string name="leavereview"><u>Leave a review</u></string>
    <string name="signup"><u>Sign Up</u></string>
    <string name="signin"><u>Sign In</u></string>
    <string name="addpettxt">Keep Track Of \nYour Pet Details</string>
    <string name="feedbacktxt">Want to leave \nus a feedback</string>
    <string name="termsConditions"><u>Terms &amp; Conditions</u></string>
    <string name="terms_condition">Terms &amp; Conditions</string>

    // Welcome Images (Onboarding Texts)
    <string name="img1_title">DAILY WALKS \nAND EXERCISE</string>
    <string name="img1_text">Our dedicated staff ensures your pet receives \nregular daily walks and exercise, promoting their \nphysical and mental well-being.</string>

    <string name="img2_title">24/7 CARE AND \nSUPERVISION</string>
    <string name="img2_text">Constant supervision and care are provided to \nguarantee your pet\'s safety and comfort. Our staff is \nalways available to ensure your pet\'s needs are met.</string>

    <string name="img3_title">BOOKING MADE EASY</string>
    <string name="img3_text">Experience the convenience of our simplified booking \nsystem. Book your pet\'s stay with just a few clicks.</string>

    // Navigation Sidebar Menu
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="gender"></string>
    <string-array name="array_gender">
        <item>Male</item>
        <item>Female</item>
        <item>I prefer not to say</item>
    </string-array>

    <string name="pet_gender"></string>
    <string-array name="array_gender_pet">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="species"></string>
    <string-array name="array_species">
        <item>Canine</item>
        <item>Feline</item>
    </string-array>

    <string name="nav_app_name">Bottom Navigation</string>

    <string name="click_here"><u>Click Here</u></string>
    <string name="terms_condi_header">TERMS &amp; CONDITIONS</string>
    <string name="tc_1">By booking in Hamugaway Pets Boarding and Daycare, you agree to these terms and conditions.</string>
    <string name="tc_2">We reserve the right to refuse if a pet appears to be sick, injured, or if its behavior may endanger others.</string>
    <string name="tc_3">We are not responsible for any personal items left with your pet.</string>
    <string name="tc_4a"><b>Illness or Injury:</b> If a pet becomes ill or is injured, we may provide necessary medical care at our discretion and will notify the owner.</string>
    <string name="tc_4b"><b>Pre-existing Conditions:</b> If your pet has a pre-existing condition that is aggravated by their stay, we will notify you and may seek veterinary care at our discretion.</string>
    <string name="tc_4c"><b>Medical Expenses:</b> You are responsible for any medical expenses incurred due to your pet\'s illness or injury.</string>
    <string name="tc_4d"><b>Updated Information:</b> We require that pets have updated vaccines. We need the owners to declare their pet\'s medical history, the type of diet and other details that we may deem necessary for the booking to be confirmed.</string>
    <string name="tc_5a"><b>Food and Supplies:</b> You are responsible for providing food, vitamins, and other essentials for your pet.</string>
    <string name="tc_5b"><b>Socialization:</b> Your pet may interact with other pets during their stay unless you specify otherwise.</string>
    <string name="tc_6">If your dog bites another pet or a staff member, you agree to cover all medical expenses and related costs.</string>
    <string name="tc_7">The owner agrees and grant us the permission to take photos of the pet and publish them on social media.</string>
    <string name="tc_8">Check-in time is 10AM. If you need to check-in at an earlier time, you may advise us for schedule plotting. Add-on fee of Php 50/hour will be charged for check-ins before 10AM. Check-out time is 2PM. Failure to pickup the pet at checkout time will incur Php 50/pet/hour or the Day Care rate, whichever is lower.</string>
    <string name="tc_9">Hamugaway Pet Boarding and Daycare provides services \"as is\" without warranties of any kind.</string>
    
    <string name="tc_8_title">8. Check-in &amp; Check-out </string>

    <string name="boardingConfirmNote">*there may be changes upon check-in\n(Pet size, Additional Charges).</string>

</resources>