<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".TermsCondition">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarSize="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/TC_Header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/backBtnTermsCondi"
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:backgroundTint="@color/transparent"
                    app:srcCompat="@drawable/back_btn_v2" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="25dp"
                    android:layout_weight="4"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/terms_condi_header"
                    android:textColor="#005353"
                    android:textColorLink="#0DFFFFFF"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/TC_desc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="1. User Agreement"
                    android:textColor="@color/cc_black"
                    android:fontFamily="@font/montserrat_bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="12dp"
                    android:textSize="12sp"
                    android:text="@string/tc_1"
                    android:textColor="@color/cc_black"
                    android:fontFamily="@font/montserrat"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginTop="15dp"
                    android:text="2. Pet Health and Behavior"
                    android:textColor="@color/cc_black"
                    android:fontFamily="@font/montserrat_bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="12dp"
                    android:textSize="12sp"
                    android:text="@string/tc_2"
                    android:textColor="@color/cc_black"
                    android:fontFamily="@font/montserrat"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginTop="15dp"
                    android:text="3. Personal Belongings"
                    android:textColor="@color/cc_black"
                    android:fontFamily="@font/montserrat_bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="12dp"
                    android:textSize="12sp"
                    android:text="@string/tc_3"
                    android:textColor="@color/cc_black"
                    android:fontFamily="@font/montserrat"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginTop="15dp"
                    android:text="4. Medical Attention"
                    android:textColor="@color/cc_black"
                    android:fontFamily="@font/montserrat_bold"/>

                <TextView
                    android:id="@+id/tc_4a_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="12dp"
                    android:textSize="12sp"
                    android:text="@string/tc_4a"
                    android:textColor="@color/cc_black"
                    android:fontFamily="@font/montserrat"/>

                <TextView
                    android:id="@+id/tc_4b_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="12dp"
                    android:textSize="12sp"
                    android:text="@string/tc_4b"
                    android:textColor="@color/cc_black"
                    android:fontFamily="@font/montserrat"/>

                <TextView
                    android:id="@+id/tc_4c_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="12dp"
                    android:textSize="12sp"
                    android:text="@string/tc_4c"
                    android:textColor="@color/cc_black"
                    android:fontFamily="@font/montserrat"/>

                <TextView
                    android:id="@+id/tc_4d_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="12dp"
                    android:textSize="12sp"
                    android:text="@string/tc_4d"
                    android:textColor="@color/cc_black"
                    android:fontFamily="@font/montserrat"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginTop="15dp"
                    android:text="5. Pet Care Responsibilities"
                    android:textColor="@color/cc_black"
                    android:fontFamily="@font/montserrat_bold"/>

                <TextView
                    android:id="@+id/tc_5a_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="12dp"
                    android:textSize="12sp"
                    android:text="@string/tc_5a"
                    android:textColor="@color/cc_black"
                    android:fontFamily="@font/montserrat"/>

                <TextView
                    android:id="@+id/tc_5b_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="12dp"
                    android:textSize="12sp"
                    android:text="@string/tc_5b"
                    android:textColor="@color/cc_black"
                    android:fontFamily="@font/montserrat"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginTop="15dp"
                    android:text="6. Liability for Bites"
                    android:textColor="@color/cc_black"
                    android:fontFamily="@font/montserrat_bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="12dp"
                    android:textSize="12sp"
                    android:text="@string/tc_6"
                    android:textColor="@color/cc_black"
                    android:fontFamily="@font/montserrat"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginTop="15dp"
                    android:text="7. Image Usage"
                    android:textColor="@color/cc_black"
                    android:fontFamily="@font/montserrat_bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="12dp"
                    android:textSize="12sp"
                    android:text="@string/tc_7"
                    android:textColor="@color/cc_black"
                    android:fontFamily="@font/montserrat"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginTop="15dp"
                    android:text="@string/tc_8_title"
                    android:textColor="@color/cc_black"
                    android:fontFamily="@font/montserrat_bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="12dp"
                    android:textSize="12sp"
                    android:text="@string/tc_8"
                    android:textColor="@color/cc_black"
                    android:fontFamily="@font/montserrat"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginTop="15dp"
                    android:text="9. Disclaimer of Warranties"
                    android:textColor="@color/cc_black"
                    android:fontFamily="@font/montserrat_bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginBottom="50dp"
                    android:textSize="12sp"
                    android:text="@string/tc_9"
                    android:textColor="@color/cc_black"
                    android:fontFamily="@font/montserrat"/>

            </LinearLayout>





        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>